--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorLightTransGray">#66BABABA</color>
     <color name="colorTextGray">#FF797979</color>
+    <color name="white_f2">#F2F2F2</color>
+    <color name="media_controller_bg">#99000000</color>
 </resources>
